--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.0",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.22.1",
     "msal": "^0.1.5",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
