--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "msal": "^0.1.5",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
