--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.1",
-    "msal": "^0.1.5",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-helmet": "^5.2.0",
@@ -19,7 +18,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^3.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
