--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.1",
+    "msal": "^0.1.5",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-helmet": "^5.2.0",
